# InteractiveToolkit

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindInteractiveToolkit.cmake  InteractiveToolkitConfig.cmake  InteractiveToolkitConfig.in.cmake
include/: android_include.cmake
include/InteractiveToolkit/: InteractiveToolkit.h  android_include.cmake  buildFlags.h.in  common.h  opts.cmake.in
include/InteractiveToolkit/AlgorithmCore/: AlgorithmCore.h
include/InteractiveToolkit/AlgorithmCore/PatternMatch/: array_index_of.h  edit_distance.h
include/InteractiveToolkit/AlgorithmCore/Polygon/: FastRemovalCyclicVector.h  Polygon2D.h  Quadtree2D_IndexedPoints.h  TriangulatorEarClipping.h
include/InteractiveToolkit/AlgorithmCore/Procedural/: RoguelikeMatrix.h
include/InteractiveToolkit/AlgorithmCore/Rasterization/: BresenhamIterator.h
include/InteractiveToolkit/AlgorithmCore/Search/: AStarMatrix.h
include/InteractiveToolkit/AlgorithmCore/Sorting/: ParallelRadixCountingSort.h  RadixCountingSort.h  RadixCountingSort32.h  RadixCountingSort64.h  SortIndex.h  SortTool.h  uint128.h
include/InteractiveToolkit/CollisionCore/: AABB.h  AABB.inl  CollisionCore.h  Frustum.h  Frustum.inl  LineSegment.h  LineSegment.inl  OBB.h  OBB.inl  Plane.h  Plane.inl  Ray.h  Ray.inl  Sphere.h  Sphere.inl  Triangle.h  Triangle.inl  collision_common.h
include/InteractiveToolkit/EaseCore/: EaseCore.h
include/InteractiveToolkit/EventCore/: Callback.h  Event.h  EventCore.h  ExecuteOnScopeEnd.h  HandleCallback.h  PressReleaseDetector.h  Property.h  STL_Tools.h  VirtualProperty.h
include/InteractiveToolkit/ITKCommon/: ByteUtils.h  Date.h  ITKAbort.h  ITKCommon.h  Matrix.h  Memory.h  Path.h  Random.h  RunLengthEncoding.h  STLSemaphore.h  STL_Tools.h  Semaphore.h  StringUtil.h  x86CPUInfo.h
include/InteractiveToolkit/ITKCommon/FileSystem/: Directory.h  File.h
include/InteractiveToolkit/MathCore/: ColorSpace.inl  FastCos.h  MathCore.h  MathRandomExt.inl  cvt.h  fixed_t.h  float.h  gen.h  int.h  mat2.h  mat3.h  mat4.h  math_common.h  op.h  operator_overload.h  operator_overload_float_simd.h  quat.h  uint128.h  util.h  vec2.h  vec3.h  vec4.h
include/InteractiveToolkit/MathCore/impl/: mat2_all_no_optimization.h  mat2_base.h  mat2_float_simd.h  mat2_gen.h  mat2_gen_float_simd.h  mat2_op.h  mat2_op_float_simd.h  mat3_all_no_optimization.h  mat3_base.h  mat3_float_simd.h  mat3_gen.h  mat3_gen_float_simd.h  mat3_op.h  mat3_op_float_simd.h  mat4_all_no_optimization.h  mat4_base.h  mat4_float_simd.h  mat4_gen.h  mat4_gen_float_simd.h  mat4_op.h  mat4_op_float_simd.h  quat_all_no_optimization.h  quat_base.h  quat_float_simd.h  quat_gen.h  quat_gen_float_simd.h  quat_op.h  quat_op_float_simd.h  simd_common.h  vec2_all_no_optimization.h  vec2_base.h  vec2_fixed32_simd.h  vec2_float_simd.h  vec2_gen.h  vec2_gen_float_simd.h  vec2_op.h  vec2_op_float_simd.h  vec3_all_no_optimization.h  vec3_base.h  vec3_fixed32_simd.h  (+9 more)
include/InteractiveToolkit/Platform/: AutoLock.h  AutoLockSemaphore.h  Condition.h  Mutex.h  Mutex.inl  Platform.h  Process.h  Semaphore.h  Signal.h  Sleep.h  SocketTCP.h  SocketUDP.h  Thread.h  Thread.h.bkp  ThreadPool.h  ThreadWithParameters.h  Time.h  platform_common.h
include/InteractiveToolkit/Platform/Core/: NetworkConstants.h  ObjectBuffer.h  ObjectPool.h  ObjectQueue.h  ProcessGracefulWindowsProcessTerminator.h  SmartVector.h  SocketTools.h  SocketUtils.h  ThreadDataSet.h  ThreadDataSet.inl  UnixPipe.h  WindowsPipe.h  unamed_fake_sem.h  unamed_fake_sem.inl
include/InteractiveToolkit/Platform/IPC/: AutoLockSemaphoreIPC.h  BufferIPC.h  ConditionIPC.h  LowLatencyQueueIPC.h  QueueIPC.h  SemaphoreIPC.h
include/InteractiveToolkit/Platform/Tool/: DebugConsoleIPC.h  GetFirstMacAddress.h
